src/styles.css
/* CUSTOM PROPERTIES */
:root {
  --background: 290 40% 97%;
  --foreground: 0 0% 10%;

  --primary: 290 10% 15%;
  --primary-foreground: 0 0% 98%;

  --element: 290 40% 99%;
  --muted-foreground: 0 0% 44%;

  --hover: 290 40%, 60%, 0.1;
  --scrollbar: 290 6% 80%;
}

.dark {
  color-scheme: dark;

  --background: 240 7% 9%;
  --foreground: 240 7% 100%;

  --primary: 240 25% 94%;
  --primary-foreground: 0 0% 8%;

  --element: 240 7% 12%;
  --muted-foreground: 240 7% 57%;

  --hover: 0, 0%, 80%, 0.1;
  --scrollbar: 240 8% 25%;
}

/* DEFAULT STYLING */
html {
  @apply scroll-pt-20 scrollbar scrollbar-track-transparent scrollbar-thumb-scrollbar;
}

body {
  @apply bg-background text-foreground overflow-y-scroll;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  @apply font-serif;
}

section {
  @apply py-10 lg:py-16;
}

.prose img,
.prose pre,
.prose code {
  @apply rounded;
}

/* CUSTOM COMPONENTS */

.banner {
  @apply py-8 md:py-12;
}

/* GRADIENTS */
.hero-gradient {
  background-color: #c19ac727;
  background-image: linear-gradient(
      54deg,
      rgba(255, 131, 122, 0.2),
      rgba(255, 131, 122, 0) 34%
    ),
    linear-gradient(
      241deg,
      rgba(130, 116, 209, 0.4),
      rgba(239, 152, 207, 0) 40%
    );
}

.dark .hero-gradient {
  background-color: #1c1c21b4;
  background-image: linear-gradient(
      54deg,
      rgba(255, 131, 122, 0.2),
      rgba(255, 131, 122, 0) 54%
    ),
    linear-gradient(
      241deg,
      rgba(168, 152, 239, 0.2),
      rgba(239, 152, 207, 0) 57%
    );
}

.collection-gradient {
  background-color: #c19ac727;
  background-image: linear-gradient(
      44deg,
      rgba(239, 108, 189, 0.2),
      rgba(255, 131, 122, 0) 54%
    ),
    linear-gradient(241deg, rgba(151, 95, 201, 0.2), rgba(239, 152, 207, 0) 48%);
}

.portfolio-gradient {
  background-color: #dfad8b2a;
  background-image: linear-gradient(
      44deg,
      rgba(230, 176, 117, 0.189),
      rgba(255, 131, 122, 0) 44%
    ),
    linear-gradient(241deg, rgba(226, 96, 85, 0.32), rgba(239, 152, 207, 0) 68%);
}

.not-found-gradient {
  background-image: radial-gradient(
      circle farthest-corner at 100% 100%,
      rgba(122, 167, 255, 0.32),
      transparent 44%
    ),
    radial-gradient(
      circle farthest-corner at 0% 100%,
      rgba(255, 1, 1, 0.15),
      transparent 32%
    );
}

